fixing margin on top on mobile

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -221,7 +221,7 @@ header .entry-meta {
     }
     @media (max-width: 500px) {
         .class  {
-            margin-top: 15px;
+            margin-top: 100px;
         }
     }
 }
